instrumentations/c#/asp_net/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: password-generator-svc
  namespace: password-generator-dotnet
spec:
  type: ClusterIP
  selector:
    app: password-generator-dotnet
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
