instrumentations/c#/asp_net/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: password-route-dotnet
  namespace: password-generator-dotnet
spec:
  parentRefs:
  - name: web-gateway
    namespace: traefik
  hostnames:
  - "password-dotnet.gabrielcarvalho.dev"
  rules:
  - backendRefs:
    - name: password-generator-svc
      port: 80
